[package]
name = "qmc"
version = "0.1.0"
authors = []
build = "build.rs"

[lib]
name = "qmc"
crate-type = ["dylib", "rlib"]

[dependencies]
blas-sys = { version = "0.6.3", features = ["openblas"] }
docopt = "0.6.81"
la = "0.2.0"
libc = "*"
modulo = "0.1.1"
ndarray = { version = "0.6.0", features = ["blas"] }
num = "0.1.34"
rand = "0.3"
rustc-serialize = "0.3.19"
